Fix scrollbars

--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -244,6 +244,7 @@ button:hover
     bottom 0px
     z-index 9999
     width 205px
+    margin-right 4px
 
     .help
       line-height 1
@@ -256,10 +257,10 @@ button:hover
       .colorPicker
         margin 0
       .colorPicker .twod, .colorPicker .twod .bg
-        width 120px
-        height 120px
+        width 115px
+        height 115px
       .colorPicker .oned, .colorPicker .oned .bg
-        height 120px
+        height 115px
 
     nav
       padding 0 0 0 10px
@@ -285,6 +286,7 @@ button:hover
         &:hover, &.active
           background-color white
     .scroll
+      width 210px
       background-color white
       float right
       top 130px
@@ -297,7 +299,6 @@ button:hover
         background-color pahviblue
         border 2px solid pahvigreen !important
       .layersSortable
-        width 181px
         list-style-type none
       >div
         font-size 0.8em
@@ -306,7 +307,7 @@ button:hover
         padding 0
         
       .addElements
-        div
+        .draggable
           background-color pahviyellow
           border dotted 2px pahvigray
           cursor move
@@ -419,7 +420,7 @@ html.presentation
 
 .boxProperties
   background-color white
-  padding 10px
+  margin 10px
   h1
     font-size 1.25em
     line-height 1
@@ -455,7 +456,7 @@ h1.propertyTitle
   background-color transparent !important
 
 .config.nameEditor input
-  width 157px
+  width 160px
 
   
 .config
